--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html5",
   "version": "1.0.0",
   "description": "This folder contains pre compressed files ready for deployment, please make sure to use the shipping build for final deployment.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
